fixed grammar in rules and squashed circles on hard on phone.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h1 {
     height: 90%;
     background-color: red;
 
-    margin: 7px;
+    margin: 2.5px;
     position: relative;
     opacity: inherit;
 }
